#136 Home page - Alignment issue in non-standard resolutions (galaxy tab).

--- a/web-app/css/cgrails/default/less/home.less
+++ b/web-app/css/cgrails/default/less/home.less
@@ -185,6 +185,9 @@
 	   }
 		
 	}
+	#login-info {
+    	 text-align: center;
+	}
 	#loginform {
 		margin-top:1em;
 		#ajaxLoginForm { 
@@ -262,6 +265,14 @@
 				}
 			}
 		}
+	}
+}
+
+/*-- Iphone and tab mid view styles. */
+@media (min-width: 481px) and (max-width: 768px) {
+	#login-info {
+		margin: 0 60px;
+    	width: 80%;
 	}
 }
 
